route anuncios/{anuncioID} updated to send an image of an advertised vehicle through the swagger
